# NotifyProductPy

./: .gitignore  .replit  NotifyProduct.py  NotifyPy.ipynb  pyproject.toml  start.sh
notify/: check_item.py  items.csv  keep_alive.py  main.py
