[tool.poetry]
name = "repl_python3_NotifyProductPy"
version = "0.1.0"
description = ""
authors = ["poowis121 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.18.0"
bs4 = "^0.0.1"
discord = "^1.7.3"
Flask = "^2.0.1"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
